:computer: Print HDF5 table headers

--- a/read-hdf5/read-hdf5.ipynb
+++ b/read-hdf5/read-hdf5.ipynb
@@ -2,158 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            ID    Length      Area  Angle_XY  Angle_YZ  Angle_ZX  \\\n",
-      "0            0  1.033494  0.862383 -2.605866 -1.003048  2.320348   \n",
-      "1            1  1.061241  0.493152  2.101086 -0.698993  0.609055   \n",
-      "2            2  1.617367  0.109301  0.512321  2.929884 -1.450502   \n",
-      "3            3  1.335946  0.790386 -1.680904 -3.022967 -2.393742   \n",
-      "4            4  1.105804  0.645262  1.055827  2.564790 -0.715879   \n",
-      "5            5  1.016022  0.538271  0.937058  0.969355  0.467081   \n",
-      "6            6  1.565203  0.151875  2.793291 -2.706062 -1.403413   \n",
-      "7            7  1.511695  0.002441  2.942997 -1.417308  0.655379   \n",
-      "8            8  1.057166  0.145616  3.069983 -3.024831 -1.562383   \n",
-      "9            9  1.030865  0.178620  3.116101 -1.410344  1.414538   \n",
-      "10          10  1.116921  0.483724  2.421228 -1.229398  0.384650   \n",
-      "11          11  1.097953  0.724265 -2.861845 -1.450917  2.744559   \n",
-      "12          12  1.860735  0.000355 -2.190967 -2.481471 -2.397858   \n",
-      "13          13  1.140445  1.108344  2.185018 -3.016842 -1.394817   \n",
-      "14          14  1.193250  0.723882  1.597880 -2.990394 -0.175962   \n",
-      "15          15  1.281210  0.504335 -1.441309  0.278271  2.713920   \n",
-      "16          16  1.210137  0.616722 -2.427604 -1.110663  2.622030   \n",
-      "17          17  1.427339  0.478728  2.456997 -1.290364  0.339206   \n",
-      "18          18  1.451582  0.240886 -1.146184  2.704139 -2.373107   \n",
-      "19          19  1.196798  1.025578  1.596946 -0.165980  0.154881   \n",
-      "20          20  1.292599  0.571538 -3.108043 -2.374790 -1.603121   \n",
-      "21          21  1.567529  0.085407 -3.097336 -1.622931 -2.274516   \n",
-      "22          22  1.236817  0.779810  1.034155  3.061184 -1.436155   \n",
-      "23          23  1.672937  0.054046  1.693819 -2.960069 -0.592830   \n",
-      "24          24  1.094468  0.457095  2.750248 -1.672922 -0.243440   \n",
-      "25          25  1.525724  0.131818  0.506217  2.943848 -1.460168   \n",
-      "26          26  1.407989  0.228886  1.298423  2.816615 -0.692186   \n",
-      "27          27  1.037870  0.579512 -1.329069  3.075692 -1.832345   \n",
-      "28          28  1.200942  0.669233 -2.884064 -1.073787  2.022821   \n",
-      "29          29  1.081964  0.756915  1.573013 -0.003258  0.597478   \n",
-      "...        ...       ...       ...       ...       ...       ...   \n",
-      "630679  630679  1.130435  0.831852 -0.005676  1.065330  1.581053   \n",
-      "630680  630680  1.330649  0.442210 -0.430697  0.229241  1.677601   \n",
-      "630681  630681  1.113596  0.780316  2.009424 -0.438782  0.785198   \n",
-      "630682  630682  1.792259  0.026234 -1.912719 -0.207770  2.105559   \n",
-      "630683  630683  1.697879  0.122846  0.659902  1.232968  0.425122   \n",
-      "630684  630684  1.705754  0.085936  0.575755  2.177225 -0.818526   \n",
-      "630685  630685  1.323581  0.530555 -1.853895 -2.733845 -2.548891   \n",
-      "630686  630686  1.017631  1.049132  1.836224 -2.944347 -0.936867   \n",
-      "630687  630687  1.366704  0.218462  1.855889 -1.792144 -0.065857   \n",
-      "630688  630688  1.760565  0.001092  1.348890  2.728077 -0.474911   \n",
-      "630689  630689  1.671392  0.111511  1.481585  2.118805 -0.054542   \n",
-      "630690  630690  1.127864  0.804677  0.251292  1.078621  1.124262   \n",
-      "630691  630691  1.627792  0.062753 -1.586605 -0.018080  2.423106   \n",
-      "630692  630692  1.466569  0.351586 -2.062565 -2.241207 -2.739943   \n",
-      "630693  630693  1.063714  1.010219 -2.761939 -0.737749  1.918730   \n",
-      "630694  630694  1.204026  0.859491  2.186408 -2.004663 -0.316673   \n",
-      "630695  630695  1.262668  0.540532  1.767973 -0.150915  0.920153   \n",
-      "630696  630696  1.021173  0.785477 -1.283871  1.889879 -3.044418   \n",
-      "630697  630697  1.154017  0.638950 -0.326567  1.678330 -2.833047   \n",
-      "630698  630698  1.236406  0.505283 -0.819410  0.587766  2.190370   \n",
-      "630699  630699  1.645887  0.075810  0.000848  1.106882  1.569102   \n",
-      "630700  630700  1.828867  0.001701  0.824835  0.674207  0.857785   \n",
-      "630701  630701  1.418370  0.363347  0.629645  1.889574 -0.425335   \n",
-      "630702  630702  1.252435  0.578294  1.327217  0.959718  0.172363   \n",
-      "630703  630703  1.028934  0.488458 -1.720478 -0.538800  2.894474   \n",
-      "630704  630704  1.052511  0.787997  0.246448  1.149854  1.058867   \n",
-      "630705  630705  1.201889  0.200158 -0.591085  1.576184 -3.133565   \n",
-      "630706  630706  1.551710  0.286350 -0.040953  0.194001  1.578847   \n",
-      "630707  630707  1.581214  0.195928  1.616218 -0.033333  0.937858   \n",
-      "630708  630708  1.643624  0.007731  0.844934  1.415281  0.138255   \n",
-      "\n",
-      "           Stiffness      Emicro  Tensile_Strength  Status  Prefracture  \n",
-      "0       1.668868e+07  20000000.0            1000.0       1            0  \n",
-      "1       9.293878e+06  20000000.0            1000.0       1            0  \n",
-      "2       1.351589e+06  20000000.0            1000.0       1            0  \n",
-      "3       1.183260e+07  20000000.0            1000.0       1            0  \n",
-      "4       1.167046e+07  20000000.0            1000.0       1            0  \n",
-      "5       1.059566e+07  20000000.0            1000.0       1            0  \n",
-      "6       1.940644e+06  20000000.0            1000.0       1            0  \n",
-      "7       3.229307e+04  20000000.0            1000.0       1            0  \n",
-      "8       2.754835e+06  20000000.0            1000.0       1            0  \n",
-      "9       3.465442e+06  20000000.0            1000.0       1            0  \n",
-      "10      8.661746e+06  20000000.0            1000.0       1            0  \n",
-      "11      1.319300e+07  20000000.0            1000.0       1            0  \n",
-      "12      3.817767e+03  20000000.0            1000.0       1            0  \n",
-      "13      1.943704e+07  20000000.0            1000.0       1            0  \n",
-      "14      1.213295e+07  20000000.0            1000.0       1            0  \n",
-      "15      7.872802e+06  20000000.0            1000.0       1            0  \n",
-      "16      1.019259e+07  20000000.0            1000.0       1            0  \n",
-      "17      6.707974e+06  20000000.0            1000.0       1            0  \n",
-      "18      3.318949e+06  20000000.0            1000.0       1            0  \n",
-      "19      1.713870e+07  20000000.0            1000.0       1            0  \n",
-      "20      8.843238e+06  20000000.0            1000.0       1            0  \n",
-      "21      1.089704e+06  20000000.0            1000.0       1            0  \n",
-      "22      1.260995e+07  20000000.0            1000.0       1            0  \n",
-      "23      6.461212e+05  20000000.0            1000.0       1            0  \n",
-      "24      8.352828e+06  20000000.0            1000.0       1            0  \n",
-      "25      1.727943e+06  20000000.0            1000.0       1            0  \n",
-      "26      3.251251e+06  20000000.0            1000.0       1            0  \n",
-      "27      1.116733e+07  20000000.0            1000.0       1            0  \n",
-      "28      1.114513e+07  20000000.0            1000.0       1            0  \n",
-      "29      1.399149e+07  20000000.0            1000.0       1            0  \n",
-      "...              ...         ...               ...     ...          ...  \n",
-      "630679  1.471738e+07  20000000.0            1000.0       1            0  \n",
-      "630680  6.646532e+06  20000000.0            1000.0       1            0  \n",
-      "630681  1.401435e+07  20000000.0            1000.0       1            0  \n",
-      "630682  2.927489e+05  20000000.0            1000.0       1            0  \n",
-      "630683  1.447052e+06  20000000.0            1000.0       1            0  \n",
-      "630684  1.007596e+06  20000000.0            1000.0       1            0  \n",
-      "630685  8.016968e+06  20000000.0            1000.0       1            0  \n",
-      "630686  2.061909e+07  20000000.0            1000.0       1            0  \n",
-      "630687  3.196922e+06  20000000.0            1000.0       1            0  \n",
-      "630688  1.240168e+04  20000000.0            1000.0       1            0  \n",
-      "630689  1.334343e+06  20000000.0            1000.0       1            0  \n",
-      "630690  1.426905e+07  20000000.0            1000.0       1            0  \n",
-      "630691  7.710206e+05  20000000.0            1000.0       1            0  \n",
-      "630692  4.794679e+06  20000000.0            1000.0       1            0  \n",
-      "630693  1.899418e+07  20000000.0            1000.0       1            0  \n",
-      "630694  1.427695e+07  20000000.0            1000.0       1            0  \n",
-      "630695  8.561744e+06  20000000.0            1000.0       1            0  \n",
-      "630696  1.538382e+07  20000000.0            1000.0       1            0  \n",
-      "630697  1.107349e+07  20000000.0            1000.0       1            0  \n",
-      "630698  8.173408e+06  20000000.0            1000.0       1            0  \n",
-      "630699  9.211994e+05  20000000.0            1000.0       1            0  \n",
-      "630700  1.860335e+04  20000000.0            1000.0       1            0  \n",
-      "630701  5.123442e+06  20000000.0            1000.0       1            0  \n",
-      "630702  9.234715e+06  20000000.0            1000.0       1            0  \n",
-      "630703  9.494441e+06  20000000.0            1000.0       1            0  \n",
-      "630704  1.497366e+07  20000000.0            1000.0       1            0  \n",
-      "630705  3.330723e+06  20000000.0            1000.0       1            0  \n",
-      "630706  3.690766e+06  20000000.0            1000.0       1            0  \n",
-      "630707  2.478196e+06  20000000.0            1000.0       1            0  \n",
-      "630708  9.407602e+04  20000000.0            1000.0       1            0  \n",
-      "\n",
-      "[630709 rows x 11 columns]\n"
+      "['ID', 'Length', 'Area', 'Angle_XY', 'Angle_YZ', 'Angle_ZX', 'Stiffness', 'Emicro', 'Tensile_Strength', 'Status', 'Prefracture']\n"
      ]
     }
    ],
    "source": [
+    "# Read HDF5 data\n",
     "# !pip3 install pandas\n",
     "import pandas as pd\n",
-    "df2 = pd.read_hdf('elements0.h5', 'table')\n",
-    "print(df2)"
+    "df = pd.read_hdf('elements0.h5', 'table')\n",
+    "# Print column headers\n",
+    "print(list(df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0         1.033494\n",
+      "1         1.061241\n",
+      "2         1.617367\n",
+      "3         1.335946\n",
+      "4         1.105804\n",
+      "5         1.016022\n",
+      "6         1.565203\n",
+      "7         1.511695\n",
+      "8         1.057166\n",
+      "9         1.030865\n",
+      "10        1.116921\n",
+      "11        1.097953\n",
+      "12        1.860735\n",
+      "13        1.140445\n",
+      "14        1.193250\n",
+      "15        1.281210\n",
+      "16        1.210137\n",
+      "17        1.427339\n",
+      "18        1.451582\n",
+      "19        1.196798\n",
+      "20        1.292599\n",
+      "21        1.567529\n",
+      "22        1.236817\n",
+      "23        1.672937\n",
+      "24        1.094468\n",
+      "25        1.525724\n",
+      "26        1.407989\n",
+      "27        1.037870\n",
+      "28        1.200942\n",
+      "29        1.081964\n",
+      "            ...   \n",
+      "630679    1.130435\n",
+      "630680    1.330649\n",
+      "630681    1.113596\n",
+      "630682    1.792259\n",
+      "630683    1.697879\n",
+      "630684    1.705754\n",
+      "630685    1.323581\n",
+      "630686    1.017631\n",
+      "630687    1.366704\n",
+      "630688    1.760565\n",
+      "630689    1.671392\n",
+      "630690    1.127864\n",
+      "630691    1.627792\n",
+      "630692    1.466569\n",
+      "630693    1.063714\n",
+      "630694    1.204026\n",
+      "630695    1.262668\n",
+      "630696    1.021173\n",
+      "630697    1.154017\n",
+      "630698    1.236406\n",
+      "630699    1.645887\n",
+      "630700    1.828867\n",
+      "630701    1.418370\n",
+      "630702    1.252435\n",
+      "630703    1.028934\n",
+      "630704    1.052511\n",
+      "630705    1.201889\n",
+      "630706    1.551710\n",
+      "630707    1.581214\n",
+      "630708    1.643624\n",
+      "Name: Length, Length: 630709, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print all lengths\n",
+    "print(df['Length'])"
+   ]
   }
  ],
  "metadata": {
