:computer: Plot stiffness from HDF5

--- a/read-hdf5/read-hdf5.ipynb
+++ b/read-hdf5/read-hdf5.ipynb
@@ -31,74 +31,130 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0         1.033494\n",
-      "1         1.061241\n",
-      "2         1.617367\n",
-      "3         1.335946\n",
-      "4         1.105804\n",
-      "5         1.016022\n",
-      "6         1.565203\n",
-      "7         1.511695\n",
-      "8         1.057166\n",
-      "9         1.030865\n",
-      "10        1.116921\n",
-      "11        1.097953\n",
-      "12        1.860735\n",
-      "13        1.140445\n",
-      "14        1.193250\n",
-      "15        1.281210\n",
-      "16        1.210137\n",
-      "17        1.427339\n",
-      "18        1.451582\n",
-      "19        1.196798\n",
-      "20        1.292599\n",
-      "21        1.567529\n",
-      "22        1.236817\n",
-      "23        1.672937\n",
-      "24        1.094468\n",
-      "25        1.525724\n",
-      "26        1.407989\n",
-      "27        1.037870\n",
-      "28        1.200942\n",
-      "29        1.081964\n",
-      "            ...   \n",
-      "630679    1.130435\n",
-      "630680    1.330649\n",
-      "630681    1.113596\n",
-      "630682    1.792259\n",
-      "630683    1.697879\n",
-      "630684    1.705754\n",
-      "630685    1.323581\n",
-      "630686    1.017631\n",
-      "630687    1.366704\n",
-      "630688    1.760565\n",
-      "630689    1.671392\n",
-      "630690    1.127864\n",
-      "630691    1.627792\n",
-      "630692    1.466569\n",
-      "630693    1.063714\n",
-      "630694    1.204026\n",
-      "630695    1.262668\n",
-      "630696    1.021173\n",
-      "630697    1.154017\n",
-      "630698    1.236406\n",
-      "630699    1.645887\n",
-      "630700    1.828867\n",
-      "630701    1.418370\n",
-      "630702    1.252435\n",
-      "630703    1.028934\n",
-      "630704    1.052511\n",
-      "630705    1.201889\n",
-      "630706    1.551710\n",
-      "630707    1.581214\n",
-      "630708    1.643624\n",
-      "Name: Length, Length: 630709, dtype: float64\n"
+      "0         1.668868e+07\n",
+      "1         9.293878e+06\n",
+      "2         1.351589e+06\n",
+      "3         1.183260e+07\n",
+      "4         1.167046e+07\n",
+      "5         1.059566e+07\n",
+      "6         1.940644e+06\n",
+      "7         3.229307e+04\n",
+      "8         2.754835e+06\n",
+      "9         3.465442e+06\n",
+      "10        8.661746e+06\n",
+      "11        1.319300e+07\n",
+      "12        3.817767e+03\n",
+      "13        1.943704e+07\n",
+      "14        1.213295e+07\n",
+      "15        7.872802e+06\n",
+      "16        1.019259e+07\n",
+      "17        6.707974e+06\n",
+      "18        3.318949e+06\n",
+      "19        1.713870e+07\n",
+      "20        8.843238e+06\n",
+      "21        1.089704e+06\n",
+      "22        1.260995e+07\n",
+      "23        6.461212e+05\n",
+      "24        8.352828e+06\n",
+      "25        1.727943e+06\n",
+      "26        3.251251e+06\n",
+      "27        1.116733e+07\n",
+      "28        1.114513e+07\n",
+      "29        1.399149e+07\n",
+      "              ...     \n",
+      "630679    1.471738e+07\n",
+      "630680    6.646532e+06\n",
+      "630681    1.401435e+07\n",
+      "630682    2.927489e+05\n",
+      "630683    1.447052e+06\n",
+      "630684    1.007596e+06\n",
+      "630685    8.016968e+06\n",
+      "630686    2.061909e+07\n",
+      "630687    3.196922e+06\n",
+      "630688    1.240168e+04\n",
+      "630689    1.334343e+06\n",
+      "630690    1.426905e+07\n",
+      "630691    7.710206e+05\n",
+      "630692    4.794679e+06\n",
+      "630693    1.899418e+07\n",
+      "630694    1.427695e+07\n",
+      "630695    8.561744e+06\n",
+      "630696    1.538382e+07\n",
+      "630697    1.107349e+07\n",
+      "630698    8.173408e+06\n",
+      "630699    9.211994e+05\n",
+      "630700    1.860335e+04\n",
+      "630701    5.123442e+06\n",
+      "630702    9.234715e+06\n",
+      "630703    9.494441e+06\n",
+      "630704    1.497366e+07\n",
+      "630705    3.330723e+06\n",
+      "630706    3.690766e+06\n",
+      "630707    2.478196e+06\n",
+      "630708    9.407602e+04\n",
+      "Name: Stiffness, Length: 630709, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "# Print all lengths\n",
-    "print(df['Length'])"
+    "# Print all stiffness\n",
+    "print(df['Stiffness'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd2d888b1d0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZ4AAAEJCAYAAACkH0H0AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAF4lJREFUeJzt3X+w3XV95/HnTS4SIkWQa7NckhZasu6mTsWFwbS4LUKF\nQB2CO+5bZIXYsqQzQAszdq2yuHEBW+wPbWYHs4SQIVAxvhcVMhYbEeyynRGkIP5A3C0ilSRIDOGX\ne1ch5Owf30/CId4k9xzu+ZzknOdj5sz9fj/fH5/P5zKTF5/v93M/Z6TVaiFJUi0z+t0ASdJwMXgk\nSVUZPJKkqgweSVJVBo8kqSqDR5JUlcEjSarK4JEkVWXwSJKqGu13A/ZRLucgSd0Z2dsJBs9ubNq0\nqavrxsbG2LJlyzS3Zt9mn4eDfR4Or6bP4+PjUzqvSvBExDzgRmAOzWhiZWYuj4iPAhcAPy6nXpaZ\nt5drPgycD7wE/FFmri/li4DlwExgVWZeXcqPBtYChwP3A+dm5gsRcWCp+zjgKeA9mflYzzstSZpU\nrXc824APZOYCYCFwUUQsKMc+mZnHls+O0FkAnA38GrAI+FREzIyImcA1wOnAAuC9bff5eLnXMcDT\nNKFF+fl0Kf9kOU+S1CdVgiczn8jMB8r288DDwJF7uGQxsDYzf5aZPwAeAU4on0cy89HMfIFmhLM4\nIkaAk4FbyvVrgLPa7rWmbN8CnFLOlyT1QfVZbRFxFPAW4N5SdHFEfCsiVkfEYaXsSODxtss2lLLd\nlR8OPJOZ23Ypf8W9yvFny/mSpD6oOrkgIg4GPgdcmpnPRcQK4Eqa9z5XAn8F/H7NNrW1bSmwFCAz\nGRsb6+o+o6OjXV+7v7LPw8E+D4cafa4WPBFxAE3ofDozPw+QmU+2Hb8O+GLZ3QjMa7t8biljN+VP\nAYdGxGgZ1bSfv+NeGyJiFHhdOf8VMnMlsLLstrqd1eEsmOFgn4eDfe7MVGe1VXnUVt6pXA88nJmf\naCs/ou20dwHfKdvrgLMj4sAyW20+8HXgPmB+RBwdEa+hmYCwLjNbwFeBd5frlwC3td1rSdl+N3BX\nOV+S1Ae1RjwnAucC346IB0vZZTSz0o6ledT2GPAHAJn5UEQk8F2aGXEXZeZLABFxMbCeZjr16sx8\nqNzvT4C1EXEV8A2aoKP8vCkiHgG20oSVJKlPRlot/+d/Ei3/gHTq7PNwsM/DYRoetblyQW0/WbuK\n7RMTAMw485w+t0aS9j0uEipJqsrgkSRVZfBIkqoyeCRJVRk8kqSqDB5JUlUGjySpKoNHklSVwSNJ\nqsrgkSRVZfBIkqoyeCRJVRk8kqSqDB5JUlUGjySpKoNHklSVwSNJqsrgkSRVZfBIkqoyeCRJVRk8\nkqSqDB5JUlUGjySpKoNHklSVwSNJqsrgkSRVZfBIkqoyeCRJVRk8kqSqDB5JUlUGjySpKoNHklSV\nwSNJqmq0RiURMQ+4EZgDtICVmbk8Il4PfBY4CngMiMx8OiJGgOXAGcAE8P7MfKDcawlwebn1VZm5\nppQfB9wAHATcDlySma3d1dHjLkuSdqPWiGcb8IHMXAAsBC6KiAXAh4A7M3M+cGfZBzgdmF8+S4EV\nACVElgFvBU4AlkXEYeWaFcAFbdctKuW7q0OS1AdVgiczn9gxYsnM54GHgSOBxcCactoa4KyyvRi4\nMTNbmXkPcGhEHAGcBtyRmVvLqOUOYFE5dkhm3pOZLZrRVfu9JqtDktQHVR61tYuIo4C3APcCczLz\niXLoRzSP4qAJpcfbLttQyvZUvmGScvZQx67tWkozuiIzGRsb67RrAEzMmMHs2bMBOLjLe+xvRkdH\nu/597a/s83Cwzz2qo6d330VEHAx8Drg0M5+LiJ3HyvuYVi/r31MdmbkSWFl2W1u2bOmqjlnbtzMx\nMQHAT7u8x/5mbGyMbn9f+yv7PBzsc2fGx8endF61WW0RcQBN6Hw6Mz9fip8sj8koPzeX8o3AvLbL\n55ayPZXPnaR8T3VIkvqgSvCUWWrXAw9n5ifaDq0DlpTtJcBtbeXnRcRIRCwEni2Py9YDp0bEYWVS\nwanA+nLsuYhYWOo6b5d7TVaHJKkPaj1qOxE4F/h2RDxYyi4DrgYyIs4H/hnY8eztdpqp1I/QTKf+\nPYDM3BoRVwL3lfOuyMytZftCXp5O/aXyYQ91SJL6YKTV6ulrlf1Va9OmTV1dOOsrt+58xzPjzHOm\ns037LJ+DDwf7PBym4R3PyN7Oc+UCSVJVBo8kqSqDR5JUlcEjSarK4JEkVWXwSJKqMngkSVUZPJKk\nqgweSVJVBo8kqSqDR5JUlcEjSarK4JEkVWXwSJKqMngkSVUZPJKkqgweSVJVBo8kqSqDR5JUlcEj\nSarK4JEkVWXwSJKqMngkSVUZPJKkqgweSVJVBo8kqSqDR5JU1ZSDJyIuiYixXjZGkjT4Rjs492Tg\nYxHx98BNwK2Z+bOetEqSNLCmPOLJzMXALwNfAi4FfhQRqyLit3rVOEnS4OlkxENmPgVcA1wTEb9O\nM/L5vYh4HLgOWJ6ZP5n+ZkqSBkVHwQMQEacA7wMWA/8I/DnwQ+ASmtHQv53OBkqSBsuUgyci/hI4\nG3gWuBG4PDM3th2/B3h62lsoSRoonYx4ZgHvysz7JjuYmS9GxPGTHYuI1cA7gc2Z+aZS9lHgAuDH\n5bTLMvP2cuzDwPnAS8AfZeb6Ur4IWA7MBFZl5tWl/GhgLXA4cD9wbma+EBEH0oTkccBTwHsy87EO\n+ixJmmad/B3PnwGPtBdExGERMb5jPzO/t5trbwAWTVL+ycw8tnx2hM4CmpHVr5VrPhURMyNiJs37\npdOBBcB7y7kAHy/3OoZm1HV+KT8feLqUf7KcJ0nqo06C51Zg7i5lc4Ev7O3CzLwb2DrFehYDazPz\nZ5n5A5qwO6F8HsnMRzPzBZoRzuKIGKGZ6n1LuX4NcFbbvdaU7VuAU8r5kqQ+6SR43piZ324vKPv/\n6lXUf3FEfCsiVkfEYaXsSODxtnM2lLLdlR8OPJOZ23Ypf8W9yvFny/mSpD7p5B3P5og4JjN3Pm6L\niGNo3p10YwVwJdAqP/8K+P0u7/WqRcRSYClAZjI21t0iDRMzZjB79mwADu7yHvub0dHRrn9f+yv7\nPBzsc4/q6ODc1cDnIuI/A48Cv0oTGKu6qTgzn9yxHRHXAV8suxuBeW2nzi1l7Kb8KeDQiBgto5r2\n83fca0NEjAKvYzdBmZkrgZVlt7Vly5ZuusWs7duZmJgA4Kdd3mN/MzY2Rre/r/2VfR4O9rkz4+Pj\nez+Jzh61XQ38DfCXwH3AX5T9qzttHEBEHNG2+y7gO2V7HXB2RBxYZqvNB75e6pwfEUdHxGtoJiCs\ny8wW8FXg3eX6JcBtbfdaUrbfDdxVzpck9cmURzyZuZ0mbP6i00oi4jPAScBYRGwAlgEnRcSxNI/a\nHgP+oNTzUEQk8F1gG3BRZr5U7nMxsJ5mOvXqzHyoVPEnwNqIuAr4BnB9Kb8euCkiHqGZ3HB2p22X\nJE2vkVZr6gOAiHgj8Gbg4PbyzFw9ze3qt9amTZu6unDWV27d+ahtxpnnTGeb9lk+jhgO9nk4TMOj\ntr3OHO5k5YLLgP8CfBOYaDvUonn/I0nSXnUyueBS4ITM/FavGiNJGnydTC74f8DuViaQJGlKOhnx\nfAT4b2WNtSfbD5SJB5Ik7VUnwXND+fkf28pGaN7xzJyuBkmSBlsnwXN0z1ohSRoanfwdzz8DRMQM\nYE5mPtGzVkmSBlYn06kPBT5FswLAi8BrI+JMmplul/eofZKkAdPJrLb/TrO68y8DL5SyrwHvme5G\nSZIGVyfBcwrNt4E+QTOhgMz8MfCLvWiYJGkwdRI8zwKvWCs7In4J8F2PJGnKOpnVtoqXvxZhRkT8\nBvCnNI/gNInt627euT0s67ZJ0t50Ejwfp1m94BrgAJr12a4FlvegXZKkAdXJdOoWTcgYNJKkrnUy\nnfrk3R3LzLumpzmSpEHXyaO263fZfwPwGmAD8CvT1iJJ0kDr5FHbK5bMiYiZwOXA89PdKEnS4Opk\nOvUrlK+j/hjwwelrjiRp0HUdPMU7AL8SQZI0ZZ1MLnicsmJBMRuYBVw43Y2SJA2uTiYXvG+X/f8L\n/J/MfG4a2yNJGnCdTC74n71siCRpOHTyqO0mXvmobVKZed6rapEkaaB1MrngGeAsmq+53lCuXVzK\nv9/2kSRptzp5x/Mvgd/NzP+1oyAi3gZ8JDNPm/aWSZIGUicjnoXAPbuU3Qv8xvQ1R5I06DoJnm8A\nfxoRBwGUnx8DHuxFwwbN9nU37/xI0jDrJHjeD5wIPBsRT9J8MdzbgCU9aJckaUB1Mp36MeA3I2Ie\nMA48kZk/7FXDJEmDqaMlcyLicOAk4Lcz84cRMR4Rc3vSMknSQJpy8ETEbwP/G/gPwEdK8XxgRQ/a\nJUkaUJ2MeP4aeE9mLgK2lbJ7gROmvVWSpIHVSfAclZl3lu0dKxi8QGd/CyRJGnKdhMZ3I+K0zFzf\nVvY7wLf3dmFErAbeCWzOzDeVstcDnwWOAh4DIjOfjogRYDlwBjABvD8zHyjXLKH58jmAqzJzTSk/\nDrgBOAi4HbgkM1u7q6ODPkuSplknI54PAJ+OiDXAQRFxLc0/9v9pCtfeACzapexDwJ2ZOR+4s+wD\nnE7z7mg+sJTyDqmEyDLgrTSP95ZFxGHlmhXABW3XLdpLHZKkPply8GTmPcCvAw8Bq4EfACdk5n1T\nuPZuYOsuxYuBNWV7Dc06cDvKb8zMVqnz0Ig4AjgNuCMzt5ZRyx3AonLskMy8JzNbwI273GuyOiRJ\nfTKlR20RMZNmxHBaZv75NNU9JzOfKNs/AuaU7SOBx9vO21DK9lS+YZLyPdUhSeqTKQVPZr4UEUfz\n6r8qe3f3b0XEXr9yoZd1RMRSmkd7ZCZjY2Nd1TMxYwazZ8/e4zkHd3nvfdXo6GjXv6/9lX0eDva5\nR3V0cO5/BVZExDKaUcXOf8Qzc3sXdT8ZEUdk5hPlcdnmUr4RmNd23txStpHmj1fby/++lM+d5Pw9\n1fFzMnMlsLLstrZs2dJFl2DW9u1MTEzs8ZyfdnnvfdXY2Bjd/r72V/Z5ONjnzoyPj0/pvE5GMKuA\n82je7bwAvEjz9zwvdtq4Yh0vr/O2BLitrfy8iBiJiIXAs+Vx2Xrg1Ig4rEwqOBVYX449FxELy4y4\n83a512R1SJL6ZK/BExH/omwe3fb5lfLZsb23e3wG+BrwxojYEBHnA1cD74iIf6KZln11Of124FHg\nEeA64EKAzNwKXAncVz5XlDLKOavKNd8HvlTKd1eHJKlPRlqtPb9aiYjnMvOQtv3PZ+a/63nL+qu1\nadOmri6c9ZVb9/qobcaZ53R1732VjyOGg30eDtPwqG1kb+dN5VHbrjc5qYv2SJIETC14ejrbTJI0\nXKYyq200It7OyyOfXffJzLt60ThJ0uCZSvBsplmpYIendtlvMYUJBpIkwRSCJzOPqtAOSdKQ6MlK\nBJIk7Y7BI0mqyuCRJFVl8EiSqjJ4JElVGTySpKo6+VoETZPt627euT1o67ZJ0t444pEkVWXwSJKq\nMngkSVUZPJKkqgweSVJVBo8kqSqDR5JUlcEjSarK4JEkVWXwSJKqMngkSVUZPJKkqgweSVJVBo8k\nqSqDR5JUlcEjSarK4JEkVWXwSJKqMngkSVUZPJKkqgweSVJVBo8kqarRfjcgIh4DngdeArZl5vER\n8Xrgs8BRwGNAZObTETECLAfOACaA92fmA+U+S4DLy22vysw1pfw44AbgIOB24JLMbFXpnCTp5+wr\nI563Z+axmXl82f8QcGdmzgfuLPsApwPzy2cpsAKgBNUy4K3ACcCyiDisXLMCuKDtukW9744kaXf2\nleDZ1WJgTdleA5zVVn5jZrYy8x7g0Ig4AjgNuCMzt2bm08AdwKJy7JDMvKeMcm5su5ckqQ/6/qgN\naAFfjogWcG1mrgTmZOYT5fiPgDll+0jg8bZrN5SyPZVvmKT850TEUppRFJnJ2NhYV52ZmDGD2bNn\nT/n8g7usZ18yOjra9e9rf2Wfh4N97lEdPb371LwtMzdGxC8Cd0TE99oPZmarhFJPlcBbWXZbW7Zs\n6eo+s7ZvZ2JiYsrn/7TLevYlY2NjdPv72l/Z5+FgnzszPj4+pfP6/qgtMzeWn5uBL9C8o3myPCaj\n/NxcTt8IzGu7fG4p21P53EnKJUl90tfgiYjXRsQv7NgGTgW+A6wDlpTTlgC3le11wHkRMRIRC4Fn\nyyO59cCpEXFYmVRwKrC+HHsuIhaWGXHntd1LktQH/R7xzAH+ISK+CXwd+NvM/DvgauAdEfFPwO+U\nfWimQz8KPAJcB1wIkJlbgSuB+8rnilJGOWdVueb7wJcq9EuStBsjrZZ/0jKJ1qZNm7q6cNZXbu3o\nHc+MM8/pqp59ic/Bh4N9Hg7T8I5nZG/n9XvEI0kaMgaPJKkqg0eSVJXBI0mqyuCRJFVl8EiSqjJ4\nJElVGTySpKoMHklSVQaPJKkqg0eSVJXBI0mqyuCRJFW1L3wD6VDbvu7mnduDsFK1JO2NIx5JUlUG\njySpKoNHklSVwSNJqsrgkSRVZfBIkqoyeCRJVRk8kqSqDB5JUlUGjySpKoNHklSVwSNJqsrgkSRV\nZfBIkqoyeCRJVRk8kqSqDB5JUlUGjySpKoNHklTVaL8bUENELAKWAzOBVZl5dZ+bJElDa+BHPBEx\nE7gGOB1YALw3Ihb0t1WT277u5p0fSRpUAx88wAnAI5n5aGa+AKwFFve5TZI0tIYheI4EHm/b31DK\nJEl9MBTveKYiIpYCSwEyk/Hx8e5udN6FvH4a27W/6Pr3tR+zz8PBPk+/YRjxbATmte3PLWWvkJkr\nM/P4zDweGOn2ExH3v5rr98ePfR6Oj30ejs809HmvhmHEcx8wPyKOpgmcs4Fz+tskSRpeAz/iycxt\nwMXAeuDhpigf6m+rJGl4DcOIh8y8Hbi9UnUrK9WzL7HPw8E+D4ee93mk1Wr1ug5JknYa+EdtkqR9\ny1A8aqtl2JbmiYjVwDuBzZn5pn63p9ciYh5wIzAHaAErM3N5f1vVWxExC7gbOJDm34tbMnNZf1tV\nR1n15B+BjZn5zn63p9ci4jHgeeAlYFuZ4dsTjnimyf60NM80ugFY1O9GVLQN+EBmLgAWAhcNwX/j\nnwEnZ+abgWOBRRGxsM9tquUSmglJw+TtmXlsL0MHDJ7pNHRL82Tm3cDWfrejlsx8IjMfKNvP0/yj\nNNCrYGRmKzN/UnYPKJ+BfzEcEXOB3wVW9bstg8hHbdNnsqV53tqntqjHIuIo4C3AvX1uSs+V0fz9\nwDHANZk58H0G/hr4IPAL/W5IRS3gyxHRAq7NzJ7NbnPEI3UoIg4GPgdcmpnP9bs9vZaZL2XmsTSr\nfpwQEQP9Pi8idry3vL/fbansbZn5b2heF1wUEb/Vq4oMnukzpaV5tH+LiANoQufTmfn5frenpsx8\nBvgqg/9e70TgzPKyfS1wckT8TX+b1HuZubH83Ax8geb1QU/4qG36uDTPgIuIEeB64OHM/ES/21ND\nRLwBeDEzn4mIg4B3AB/vc7N6KjM/DHwYICJOAv44M9/X10b1WES8FpiRmc+X7VOBK3pVnyOeaTKM\nS/NExGeArwFvjIgNEXF+v9vUYycC59L8H/CD5XNGvxvVY0cAX42Ib9H8z9UdmfnFPrdJ028O8A8R\n8U3g68DfZubf9aoyVy6QJFXliEeSVJXBI0mqyuCRJFVl8EiSqnI6tSQNuU4W/I2IXwLWAIfSLIj8\nofKdZ1PmiEeSdANT/8Pgy2n+XOQtNH+v+KlOK3PEI0lDLjPvLusP7hQRv0qz4v4bgAnggsz8Hs2a\nboeU014HbOq0Pkc8kqTJrAT+MDOPA/6Yl0c2HwXeFxEbgNuBP+z0xgaPJOkVykK4vwn8j4h4ELiW\nZhULgPcCN2TmXOAM4KaI6ChLfNQmSdrVDOCZsir5rs6nvA/KzK+Vb6kdAzZ3cnNJknYqX/fxg4j4\n99AskBsRby6HfwicUsr/NTAL+HEn93etNkkacmXB35NoRi5PAsuAu4AVNI/YDgDWZuYV5everwMO\npplo8MHM/HIn9Rk8kqSqfNQmSarK4JEkVWXwSJKqMngkSVUZPJKkqgweSVJVBo8kqSqDR5JU1f8H\n0uCi9qNGW6MAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fd2d912e2b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Plot stiffness\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "matplotlib.style.use('ggplot')\n",
+    "%matplotlib inline\n",
+    "(df['Stiffness']).plot.hist(alpha=0.5, bins=100, range=(1e5,5e8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1003.3955107584422"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Minimum stiffness\n",
+    "df['Stiffness'].min()"
    ]
   }
  ],
